feat(app api): Enable multiple login methods for a single account
